added the latency demo.  demonstrate gc timings.